Bug 1711834 - Let the compiler generate the Matrix4x4Typed copy assignment operator. r=mattwoodrow

This avoids GCC complaining about the case where doing `m = m` would
memcpy from an address onto itself.

Differential Revision: https://phabricator.services.mozilla.com/D115460